Fix z-index bug

--- a/style.css
+++ b/style.css
@@ -159,6 +159,7 @@ input:checked + .slider:before {
     text-align: center;
     width: 100%;
     font-family: sans-serif;
+    z-index: 999999;
 }
 
 #attribution span{
